--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
         <item>打开写字板(w/x)</item>
         <item>打开浏览器(b/l)</item>
     </string-array>
+    <string name="title_activity_talk">TalkActivity</string>
 </resources>
