Major update: Joined the PPT and video control function, joined the new commands such as switching window and close the window the quick start to join the gesture control, improve the problem is out of harmony with the keyboard and mouse control in mobile phone input method and input method in computer.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,5 @@
         <item>打开浏览器(b/l)</item>
     </string-array>
     <string name="title_activity_talk">TalkActivity</string>
+    <string name="title_activity_remote2">Remote2Activity</string>
 </resources>
